--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.5.0-dev.32",
     "bcrypt": "^5.1.1",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "prisma": "^6.5.0-dev.32",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
