--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0-dev.32",
+    "@reduxjs/toolkit": "^2.6.0",
     "bcrypt": "^5.1.1",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "prisma": "^6.5.0-dev.32",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "zod": "^3.24.2"
   },
