--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.5.0-dev.32",
     "@reduxjs/toolkit": "^2.6.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "prisma": "^6.5.0-dev.32",
